--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
     <string name="app_name">News App</string>
     <string name="home_title">Home</string>
+    <string name="back">Back</string>
+    <string name="bookmark">Bookmark</string>
+    <string name="share">Share</string>
+    <string name="browse">Browse</string>
 </resources>
