--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="bookmark">Bookmark</string>
     <string name="share">Share</string>
     <string name="browse">Browse</string>
+    <string name="bookmark_title">Bookmark</string>
 </resources>
